--- a/newmines.html
+++ b/newmines.html
@@ -12,16 +12,16 @@
         <legend>Try your foot at an old game</legend>
             <div id="outerMine">
                 <div class="MineRows">
-                    <div class="MineCol hideMe" id="a1">a&</div>
-                    <div class="MineCol hideMe" id="a2">a&</div>
-                    <div class="MineCol hideMe" id="a3">a&</div>
-                    <div class="MineCol hideMe" id="a4">a&</div>
-                    <div class="MineCol hideMe" id="a5">a&</div>
-                    <div class="MineCol hideMe" id="a6">a&</div>
-                    <div class="MineCol hideMe" id="a7">a&</div>
-                    <div class="MineCol hideMe" id="a8">a&</div>
-                    <div class="MineCol hideMe" id="a9">a&</div>
-                    <div class="MineCol hideMe" id="a10">a&</div>
+                    <div class="MineCol hideMe" id="a1"></div>
+                    <div class="MineCol hideMe" id="a2"></div>
+                    <div class="MineCol hideMe" id="a3"></div>
+                    <div class="MineCol hideMe" id="a4"></div>
+                    <div class="MineCol hideMe" id="a5"></div>
+                    <div class="MineCol hideMe" id="a6"></div>
+                    <div class="MineCol hideMe" id="a7"></div>
+                    <div class="MineCol hideMe" id="a8"></div>
+                    <div class="MineCol hideMe" id="a9"></div>
+                    <div class="MineCol hideMe" id="a10"></div>
                 </div>
                 <div class="MineRows">
                     <div class="MineCol hideMe" id="b1">s</div>
