need to add win condition and right-click

--- a/newmines.html
+++ b/newmines.html
@@ -132,6 +132,7 @@
                     <div class="MineCol hideMe" id="j10">s</div>
                 </div>
             </div><button id="MineStart">Start</button>
+            <h2 id="MineRestart"></h2>
 
     </fieldset>
 <script src="scripts/newmine.js"></script>    
